@@ -89,14 +89,8 @@ else
 
 /** lets see if we CAN move folders to the trash.. otherwise,
     ** just delete them **/
-
-/* Courier IMAP doesn't like subfolders of Trash
- * If global options say we can't move it into Trash
- * If it's already a subfolder of trash, we'll have to delete it */
-if (strtolower($imap_server_type) == 'courier' || 
-    (isset($delete_folder) && $delete_folder) ||
-    eregi('^'.$trash_folder.'.+', $mailbox) )
-{
+if ((isset($delete_folder) && $delete_folder) ||
+    eregi('^'.$trash_folder.'.+', $mailbox) ) {
     $can_move_to_trash = FALSE;
 }
 
